--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ router ospf 1
 
 </body>
 <footer>
-    <p>&copy; 2025 Guide Terraform avec AWS. Tous droits réservés.</p>
+    <p>&copy; 2025 Guide VXLAN BGP EVPN (SDN Distribué). Tous droits réservés.</p>
     <p>Contact: <a href="mailto:amadouadmnsys@gmail.com" style="color: #fff;">amadouadmnsys@gmail.com</a></p>
 </footer>
 </html>
