--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="section">
     <h2>🧭 Architecture du Projet</h2>
-    <p>Cette section décrit l’architecture physique et logique du projet. Tu peux insérer ici un diagramme réseau :</p>
+    <p>Cette section décrit l’architecture physique et logique du projet.</p>
 
     <img src="vxlan.png" alt="Diagramme de l'architecture VXLAN EVPN">
     <p>
@@ -35,7 +35,7 @@
 
     <h3>Table de Dimensionnement du Réseau</h3>
 
-    <table  border="1" cellpadding="8" cellspacing="0" style="margin: 0 auto; border-collapse: collapse;">
+    <table border="1" cellpadding="8" cellspacing="0" style="margin: 0 auto; border-collapse: collapse; min-width: 700px; max-width: 100%;">
         <thead>
         <tr style="background-color:#f2f2f2;">
             <th>Type</th>
